# sprowl

./: Cargo.toml  README.md  TODO
examples/: advanced_fs.glsl  advanced_vs.glsl  sdl2-simple.rs
shaders/: vanilla_fs.glsl
src/: canvas.rs  color.rs  error.rs  font_cache.rs  font_renderer.rs  gelem.rs  gl_utils.rs  helpers.rs  lib.rs  render.rs  shader.rs  texture.rs  utils.rs
src/font/: font_renderer.rs  helpers.rs  mod.rs
src/primitives/: mod.rs  shader.rs
src/render_storage/: mod.rs
src/render_storage/font/: font_cache.rs  font_renderer.rs  helpers.rs
src/render_storage/texture/: mod.rs
src/renderer/: mod.rs
src/shader/: base_shader.rs  mod.rs  render_source.rs  shader_params.rs
src/shaders/: mod.rs
src/shaders/advanced/: advanced_fs.glsl  advanced_vs.glsl  mod.rs
src/shaders/vanilla/: mod.rs  vanilla_fs.glsl  vanilla_vs.glsl
