[package]
name = "sprowl"
version = "0.3.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
image = { version = "^0.22", default-features = false, features = ["png_codec", "bmp"]}
gl = "^0.14"
cgmath = "^0.17"
rusttype = { version = "^0.8", features = ["std", "gpu_cache"] }
hashbrown = "^0.6"

linked-hash-map = "^0.5"

[dev-dependencies]
sdl2 = "^0.32"