[package]
name = "sprowl"
version = "0.5.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
image = { version = "0.23.6", default-features = false, features = ["png", "bmp"] }
gl = "0.14.0"
cgmath = "0.17"
rusttype = "0.9.2"
hashbrown = "0.8.0"
smallvec = "1.4.1"
linked-hash-map = "0.5.3"
log = "0.4.8"

[dev-dependencies]
sdl2 = "0.34.2"
env_logger = "0.7.1"

[profile.release]
# debug = true # flamegraph only
# rustflags = "-C target-cpu=native"
