[package]
name = "sprowl"
version = "0.5.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
image = { version = "0.23.9", default-features = false, features = ["png", "bmp"] }
gl = "0.14.0"
cgmath = { git = "https://github.com/rustgd/cgmath.git", rev = "a691de8" }
rusttype = "0.9.2"
hashbrown = "0.11.0"
smallvec = "1.4.2"
linked-hash-map = "0.5.3"
log = "0.4.11"

[dev-dependencies]
sdl2 = "0.34.3"
env_logger = "0.8.3"

[profile.release]
# debug = true # flamegraph only
# rustflags = "-C target-cpu=native"
